sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	/*for(i <- 0 to length-2){
		if tab(i) > tab(i+1)){
			return false
		}
		return true
	}*/
	var indic :Boolean = false;
	do{
		indic=false;
		for(i<-0 to length-2){
			if(plusPetit(i:Int,j:Int)){
				echange(i:Int,j:Int);
				indic= true;
			}
		}
		
		
	}
	while(indic==true)
	
}
